[tool.poetry]
name = "resonator"
version = "0.1.0"
description = ""
authors = ["Ri Le <r.le@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.10"
pandas = "^1.2.2"
numpy = "^1.20.1"
black = "^20.8b1"
pytest = "^6.2.2"
pip = "^21.0.1"

[tool.poetry.dev-dependencies]
black = "*"
pyinstaller = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
