[tool.poetry]
name = "resonator"
version = "0.1.0"
description = ""
authors = ["Ri Le <r.le@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
numpy = "^1.20.1"
black = "^20.8b1"
pip = "^21.0.1"
openpyxl = "^3.0.7"
lxml = "^4.6.2"
pycountry = "^20.7.3"
pytest = "^6.2.4"
pytomlpp = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "*"
pyinstaller = "*"
rope = "^0.18.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
